# yandex_disk_tests

./: .coverage  .env  .env.example  .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
data/: test_file.txt
reports/: test_report.html
tests/: conftest.py  test_disk_operations.py  test_file_operations.py  test_folder_operations.py  test_metadata.py
utils/: api_client.py  config.py  helpers.py
